# race-energy-orchestrator

./: .gitignore  README.md  package.json  pyproject.toml
.openai/: hosting.json
docs/: metrics.csv  strategy_trace.csv
race_energy_orchestrator/: __init__.py
scripts/: build-dashboard.sh  build-worker.mjs  git-auto-sync.sh  git-sync-once.sh
sf26_energyos/: __init__.py
src/race_energy_orchestrator/: __init__.py  cli.py  data.py  metrics.py  model.py  report.py
src/sf26_energyos/: __init__.py  cli.py  config.py  report.py  segmentation.py  strategy.py
tests/: test_energy_model.py
