[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "race-energy-orchestrator"
version = "0.1.0"
description = "Predictive hybrid race vehicle energy management and clipping prevention dashboard."
requires-python = ">=3.10"
dependencies = [
  "fastf1>=3.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "plotly>=5.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
race-energy-orchestrator = "race_energy_orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
